crates/fig-lexer/tests/snapshots/integration_tests__structs__empty.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Struct
- Ident: Empty
- Newline
