crates/fig-lexer/tests/snapshots/integration_tests__structs__single_field.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Struct
- Ident: Wrapper
- Newline
- Indent
- Ident: value
- Colon
- I32
- Newline
- Dedent
